@@ -3,6 +3,7 @@ Changes for 3.4.9rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-13668] fixed dynamic widget is searching for item key in item prototypes (agriscenko)
 ..F....... [ZBX-13500] fixed fractional triggers are misinterpreted without leading 0 (agriscenko)
 ..F....... [ZBX-13561] fixed incorrectly displayed pie graph when first item has no data (Ivo)
 ..F....... [ZBX-13517] fixed undefined index in pie charts (Ivo)
